--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: your awesome title
-page-title: your awesome page-title.
-home-title: your awesome home-title.
-description: description
+title: s3cunDa
+page-title: Stay foolish, stay hungry.
+home-title: Something about computer, something about nothing.
+description: 
 ---
 
 {% include header.html %}
